# andromeda

./: .claudeprompt.md  .editorconfig  .env.example  .gitignore  .gitmodules  .zenodo.json  00_INGEST  01-p31-global.md  01-review.md  AGENTS.md  AI_WORKSPACE_ANCHOR.md  BONDING_DAY1_PROMPT.md  BONDING_MANUFACTURING_ORDER.md  BONDING_MASTER_SYNTHESIS.md  BONDING_WCD05_LIVING_ATOMS.md  CITATION.cff  CLAUDE.md  CLAUDE_CODE_HANDOVER.md  CLINICAL_VALIDATION_REPORT.md  CLOUDFLARE_WORKER_PROJECT_IDEAS.md  COMMERCIAL_LICENSE.md  CONSTITUTION.md  CONTRIBUTING.md  CRYPTOGRAPHIC_FINALITY_EXECUTION_SUMMARY.md  CRYPTOGRAPHIC_FINALITY_PLAN.md  CRYPTOGRAPHIC_REQUIREMENTS.md  DEEP_RESEARCH_REPORT.md  DEPLOYMENT_PACKAGE.md  DEPLOYMENT_STATUS.md  DISCORD_RESEARCH_PROMPT.md  ENHANCEMENT_DOCUMENTATION.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_PRODUCTION_RELEASE_SUMMARY.md  FIXED_FLOATING_NEUTRALS.md  GEOLOCATION_AUDIO_HOOKS_PROMPT.md  INSTALL_DEPENDENCIES.py  KOFI_SHOP_UPLOAD_CHECKLIST.md  LAUNCH_EXECUTION.md  MANUAL_DEPENDENCY_SETUP.md  ONE_CLICK_LAUNCH_SYSTEM.md  (+64 more)
.githooks/: post-commit  pre-commit
.github/: CODEOWNERS  SECURITY.md  branch-protection-master.json  branch-protection.json
01_ADMIN/: 00_CORE_AXIOMS.md  00_OPERATOR_BASELINE.md  01-build.md  01-debug.md  01-docs.md  01_BUS_BAR_PROTOCOL.md  01_EXECUTIVE_SYNTHESIS.md  02_SOULSAFE_PROTOCOL.md  02_SPOON_ECONOMICS.md  03_EPCP_DASHBOARD.md  (+46 more)
05_FIRMWARE/node-zero/main/: CMakeLists.txt  bus_mutex.c  bus_mutex.h  display.c  display.h  lora.c  lora.h  lv_conf.h  main.cpp  p31_net.c  p31_net.h  p31_ui.c  p31_ui.h  touch.c  touch.h
(+2436 files in other folders)
